--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Debug TS Main",
             "runtimeArgs": ["--nolazy", "-r", "ts-node/register"],
             "args": ["main.ts"],
             "cwd": "${workspaceRoot}",
