--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,5 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "commonjs",
-    "sourceMap": true,
-    "strict": true, 
-    "esModuleInterop": true 
-  },
-  "include": [
-    "*.ts"
-  ]
+    "strict": true
+  }
 }
