--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "main.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/anorborg/minimal-repo.git"
+  },
   "scripts": {
-    "debug-ts": "node --nolazy -r ts-node/register main.ts"
+    "debug-ts": "node --nolazy -r ts-node/register -r tsconfig-paths/register main.ts",
+    "test": "jest --clearCache && jest --config config/jest.config.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^23.3.2",
+    "jest": "^23.5.0",
+    "ts-jest": "^23.1.4",
     "ts-node": "^7.0.1",
+    "tsconfig-paths": "^3.5.0",
     "typescript": "^3.0.3"
   },
   "dependencies": {}
