--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "url": "https://github.com/anorborg/minimal-repo.git"
   },
   "scripts": {
-    "debug-ts": "node --nolazy -r ts-node/register -r tsconfig-paths/register main.ts",
-    "test": "jest --clearCache && jest --config config/jest.config.js"
+    "debug-ts": "node --nolazy --require ./config/ts-node-app-register --require tsconfig-paths/register main.ts",
+    "test": "jest --clearCache && jest --config config/jest.config.json"
   },
   "author": "",
   "license": "ISC",
