--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "https://github.com/anorborg/minimal-repo.git"
   },
   "scripts": {
+    "lint": "tslint --config config/tslint.json --project tsconfig.json",
     "debug-ts": "node --nolazy --require ./config/ts-node-app-register --require tsconfig-paths/register main.ts",
     "test": "jest --clearCache && jest --config config/jest.config.json"
   },
@@ -19,6 +20,8 @@
     "ts-jest": "^23.1.4",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.5.0",
+    "tslint": "^5.11.0",
+    "tslint-config-standard": "^8.0.1",
     "typescript": "^3.0.3"
   },
   "dependencies": {}
