--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,8 @@
         }
     ],
     "tslint.autoFixOnSave": true,
-    "tslint.configFile": "config/tslint.ide.json"
+    "tslint.configFile": "config/tslint.ide.json",
+    "cSpell.words": [
+        "devtool"
+    ]
 }
